--- a/TestPro/template/signup.html
+++ b/TestPro/template/signup.html
@@ -4,11 +4,43 @@
 <div class="container">
 <h1>Signup Form</h1>
 
+<ul class="messages">
+    {% for msg in messages %}
+    <li> 
+    <div class="alert alert-{{msg.level_tag}}" role="alert">
+        {{msg.message}}
+    </div>
+
+    {% endfor%}
+    </li>
+
+</ul>
+
 <form action="{% url 'addUser' %}" method="POST">
     {% csrf_token %}
-{{form.as_p}}
 
-<input type="submit" value="Register "> 
+    <div class="form-group">
+        <label for> Username </label>
+    {{form.username}}
+    </div>
+    
+    <div class="form-group">
+        <label for> password </label>
+    {{form.password}}
+    </div>
+    
+    <div class="form-group">
+        <label for> Email</label>
+    {{form.email}}
+    </div>
+    
+    <div class="form-group">
+        <label for> Phone</label>
+    {{form.phone}}
+    </div>
+    
+            
+<input type="submit" class="btn btn-success"> 
 
 </form>
 </div>
